tests/negative/test_fnc_same_sig_no_drop.orb
data Foo;

fnc dropFoo (val:Foo::noDrop) ();

data Foo {
    x:i32
}::((drop dropFoo));

fnc dropFoo (val:Foo::noDrop) () {};

fnc foo (f:Foo) () {};

fnc foo (f:Foo::noDrop) () {};

fnc main () () {
};